<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csi.hdauven.com.csi_week_1.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#000000">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imgViewMain"
        android:layout_gravity="top|center_horizontal"
        android:src="@drawable/mybadguy"
        android:contentDescription="@string/ImageString"
        android:layout_weight="0" />

    <LinearLayout
        style="@style/LinearLayout.Vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:baselineAligned="false"
            android:measureWithLargestChild="true"
            android:clickable="false"
            android:background="@drawable/background">

            <TableRow
                style="@style/TableRowBase.First">

                <LinearLayout
                    style="@style/TableRowLayout">

                    <TextView
                        style="@style/TextViewBase.Margin.Left"
                        android:text="@string/NameString"
                        android:id="@+id/tvName" />

                    <TextView
                        style="@style/TextViewBase.Margin.Right"
                        android:text="@string/ValueString"
                        android:id="@+id/tvNameValue" />

                </LinearLayout>

            </TableRow>

            <TableRow
                style="@style/TableRowBase">

                <LinearLayout
                    style="@style/TableRowLayout">

                    <TextView
                        style="@style/TextViewBase.Margin.Left"
                        android:text="@string/GenderString"
                        android:id="@+id/tvGender" />

                    <TextView
                        style="@style/TextViewBase.Margin.Right"
                        android:text="@string/ValueString"
                        android:id="@+id/tvGenderValue" />
                </LinearLayout>

            </TableRow>

            <TableRow
                style="@style/TableRowBase">

                <LinearLayout
                    style="@style/TableRowLayout">

                    <TextView
                        style="@style/TextViewBase.Margin.Left"
                        android:text="@string/AgeString"
                        android:id="@+id/tvAge" />

                    <TextView
                        style="@style/TextViewBase.Margin.Right"
                        android:text="@string/ValueString"
                        android:id="@+id/tvAgeValue" />
                </LinearLayout>
            </TableRow>

            <TableRow
                style="@style/TableRowBase">

                <LinearLayout
                    style="@style/TableRowLayout">

                    <TextView
                        style="@style/TextViewBase.Margin.Left"
                        android:text="@string/BountyString"
                        android:id="@+id/tvBounty" />

                    <TextView
                        style="@style/TextViewBase.Margin.Right"
                        android:text="@string/ValueString"
                        android:id="@+id/tvBountyValue" />
                </LinearLayout>
            </TableRow>
        </TableLayout>

        <LinearLayout
            style="@style/LinearLayout.Vertical">

            <TextView
                style="@style/TextViewBase"
                android:text="@string/DetailsString"
                android:id="@+id/tvDetails" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:id="@+id/scrollView">

                <TextView
                    style="@style/TextViewBase.Margin.Details"
                    android:text="@string/DetailsTextView"
                    android:id="@+id/txtViewDetails" />
            </ScrollView>

            <Button
                style="@style/ButtonBase.Centered"
                android:text="@string/ReportString"
                android:id="@+id/btnReport" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
