<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csi.hdauven.com.csi_week_1.ReportActivity"
    tools:showIn="@layout/activity_report"
    android:background="#000000">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePictureText"
        android:id="@+id/btnTakePicture"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backText"
        android:id="@+id/btnBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendText"
        android:id="@+id/btnSend"
        android:layout_above="@+id/btnBack"
        android:layout_alignStart="@+id/btnGPS"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpsText"
        android:id="@+id/btnGPS"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="false" />

    <ImageView
        android:layout_below="@+id/btnTakePicture"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/imgViewReport"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="false"
        android:src="@drawable/mybadguy"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_margin="5dp"
        android:contentDescription="@string/scumText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callText"
        android:id="@+id/btnCall"
        android:layout_below="@+id/imgViewReport"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
